<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FF00"
    android:orientation="vertical"
    android:id="@+id/layout2">
    <!-- Inserta aqui el codi XML del teu Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <TextView
            android:id="@+id/textCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/green"
            android:textColor="@color/black"
            android:background="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textAbove1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/yellow"
            android:textColor="@color/black"
            android:background="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_above="@+id/textCenter"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/textAbove2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/orange"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_above="@+id/textAbove1"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/textAbove3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/red"
            android:textColor="@color/black"
            android:background="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_above="@+id/textAbove2"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/textBelow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/blue"
            android:textColor="@color/black"
            android:background="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/textCenter"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/textBelow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/purple"
            android:textColor="@color/black"
            android:background="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/textBelow1"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/textBelow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/fuchsia"
            android:textColor="@color/black"
            android:background="@color/fuchsia"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@+id/textBelow2"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <!-- Final del codi XML del teu Layout -->
</androidx.constraintlayout.widget.ConstraintLayout>