<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF"
    android:orientation="vertical"
    android:id="@+id/layout3">
    <!-- Inserta aqui el codi XML del teu Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <TextView
            android:id="@+id/textVerticalAnchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/fuchsia"
            android:textColor="@color/black"
            android:background="@color/fuchsia"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/horizontalAnchor"/>
        <TextView
            android:id="@+id/horizontalAnchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/yellow"
            android:textColor="@color/black"
            android:background="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/textVerticalAnchor"/>
        <TextView
            android:id="@+id/textAbove1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/orange"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_above="@id/horizontalAnchor"
            android:layout_toStartOf="@id/horizontalAnchor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/red"
            android:textColor="@color/black"
            android:background="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_above="@id/textAbove1"
            android:layout_toStartOf="@id/textAbove1"/>
        <TextView
            android:id="@+id/textBelow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/blue"
            android:textColor="@color/black"
            android:background="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@id/textVerticalAnchor"
            android:layout_toStartOf="@id/textVerticalAnchor"/>
        <TextView
            android:id="@+id/textBelow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/purple"
            android:textColor="@color/black"
            android:background="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@id/textBelow1"
            android:layout_toStartOf="@id/textBelow1"/>
        <TextView
            android:id="@+id/textBelow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/green"
            android:textColor="@color/black"
            android:background="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_below="@id/textBelow2"
            android:layout_toStartOf="@id/textBelow2"/>
    </RelativeLayout>
    <!-- Final del codi XML del teu Layout -->
</androidx.constraintlayout.widget.ConstraintLayout>