<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    android:orientation="vertical"
    android:id="@+id/layout1">
    <!-- Inserta aqui el codi XML del teu Layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/TopStart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@color/red"
            />
        <TextView
            android:id="@+id/TopEnd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/green"
            />
        <TextView
            android:id="@+id/BottomEnd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/blue"
            />
        <TextView
            android:id="@+id/BottomStart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/yellow"
            />
        <TextView
            android:id="@+id/textCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/center"
            android:gravity="center"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/textAbove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/above"
            android:gravity="center"
            android:layout_above="@id/textCenter"
            android:layout_toEndOf="@id/textCenter"
            />
        <TextView
            android:id="@+id/textBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/below"
            android:gravity="center"
            android:layout_below="@id/textCenter"
            android:layout_toEndOf="@id/textCenter"
            />
        <TextView
            android:id="@+id/textFurtherAbove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/further_above"
            android:gravity="center"
            android:layout_above="@id/textAbove"
            android:layout_toEndOf="@id/textAbove"
            />
        <TextView
            android:id="@+id/textFurtherBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/further_below"
            android:gravity="center"
            android:layout_below="@id/textBelow"
            android:layout_toEndOf="@id/textBelow"
            />
    </RelativeLayout>
    <!-- Final del codi XML del teu Layout -->
</androidx.constraintlayout.widget.ConstraintLayout>